syntax = "proto3";

package finances.movement;

import "google/protobuf/empty.proto";
import "category/category.proto";
import "subcategory/subcategory.proto";

service MovementService {
  rpc FindOne(Id) returns (stream Movement) {}
  rpc FindAll(MovementFilter) returns (stream Movements) {}
  rpc Create(CreateMovement) returns (stream Movement) {}
  rpc CreateMany(CreateMovement) returns (stream Movement) {}
  rpc Update(UpdateMovement) returns (stream Movement) {}
  rpc Remove(Id) returns (stream Status) {}
  rpc RemoveAll(google.protobuf.Empty) returns (stream Status) {}
}

message Status {
  bool status = 1;
}

message Movement {
  int32       id            = 1;
  string      date          = 2;
  string      type          = 3;
  string      description   = 4;
  int32       amount        = 5;
  Category    category      = 51;
  int32       categoryId    = 6;
  Subcategory subcategory   = 61;
  int32       subcategoryId = 7;
  string      createdAt     = 8;
}

message Movements {
  repeated Movement data = 1;
}

message CreateMovement {
  string date = 1;
  string type = 2;
  string description = 3;
  int32 amount = 4;
  int32 category = 5;
  int32 subcategory = 6;
  int32 account = 9;
  int32 user = 10;
}

message UpdateMovement {
  int32 id = 1;
  string date = 2;
  string type = 3;
  string description = 4;
  int32 amount = 5;
  int32 category = 6;
  int32 subcategory = 7;
  int32 account = 9;
  int32 user = 10;
}

message Id {
  int32 id = 1;
}

message MovementFilter {
  string          period   = 1;
  string          date     = 2;
  int32           category = 3;
  repeated string type     = 4;
  string          order    = 5;
  int32           account  = 6;
}
